--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -50,6 +50,21 @@
 								<rows>
 									<row>
 										<cell>
+											<hlayout hflex="1">
+												<hlayout width="150px">
+													<checkbox checked="@bind(fx.participant.courseParticipant.contact.czechCitizenship)" />
+													<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
+												</hlayout>
+<!-- 												<hlayout width="150px"> -->
+<!-- 													<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.participant.courseParticipant.contact.sexMale)" /> -->
+<!-- 													<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" /> -->
+<!-- 	                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/> -->
+<!-- 												</hlayout> -->
+											</hlayout>
+										</cell>
+									</row>
+									<row>
+										<cell>
 											<vbox hflex="1">
 												<label value="${c:l('txt.ui.common.firstname')}"/>
 												<textbox id="particFirstname" 
