--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -220,6 +220,21 @@
 										<rows style="background: white;" >
 											<row>
 												<cell>
+													<hbox style="margin-top: 10px;" hflex="1">
+														<hlayout width="150px">
+															<checkbox checked="@bind(fx.courseParticipant.contact.czechCitizenship)" />
+															<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
+														</hlayout>
+<!-- 														<hlayout width="150px"> -->
+<!-- 															<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale)" /> -->
+<!-- 															<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" /> -->
+<!-- 			                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/> -->
+<!-- 														</hlayout> -->
+													</hbox>
+												</cell>
+											</row>
+											<row>
+												<cell>
 													<vbox hflex="1">
 														<label value="${c:l('txt.ui.common.firstname')}"/>
 														<textbox id="particFirstname" 
