--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -199,11 +199,11 @@
 												<checkbox checked="@bind(vm.application.courseParticipant.contact.czechCitizenship)" />
 												<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
 											</hlayout>
-<!-- 											<hlayout width="150px"> -->
-<!-- 												<radiogroup id="sexRadioGroup" selectedItem="@bind(vm.application.courseParticipant.contact.sexMale)" /> -->
-<!-- 												<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" /> -->
-<!--                 								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/> -->
-<!-- 											</hlayout> -->
+											<hlayout width="150px">
+												<radiogroup id="sexRadioGroup" selectedItem="@bind(vm.application.courseParticipant.contact.sexMale)" />
+												<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" />
+                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/>
+											</hlayout>
 										</hlayout>
 									</cell>
 								</row>
