--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -225,11 +225,11 @@
 															<checkbox checked="@bind(fx.courseParticipant.contact.czechCitizenship)" />
 															<label value="${c:l('txt.ui.common.CzechCitizen')}"/>
 														</hlayout>
-<!-- 														<hlayout width="150px"> -->
-<!-- 															<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale)" /> -->
-<!-- 															<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" /> -->
-<!-- 			                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/> -->
-<!-- 														</hlayout> -->
+														<hlayout width="150px">
+															<radiogroup id="sexRadioGroup" selectedItem="@bind(fx.courseParticipant.contact.sexMale)" />
+															<radio id="sexMale" label="${c:l('txt.ui.common.Sex.male')}" radiogroup="sexRadioGroup" value="${true}" />
+			                								<radio id="sexFemale" label="${c:l('txt.ui.common.Sex.female')}" radiogroup="sexRadioGroup" value="${false}"/>
+														</hlayout>
 													</hbox>
 												</cell>
 											</row>
