systemId to CourseParticipant, ISCUS export

--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -60,7 +60,8 @@
 									<!-- Ceska unie sportu -->
 									<menuitem label="${c:l('txt.ui.export.Cus')} ${c:l('txt.ui.export.XLS')}"
 										onClick="@command('exportToExcelISCUSCmd',listbox=courseApplicationList)" />
-									<menuitem label="${c:l('txt.ui.export.Cus')} ${c:l('txt.ui.export.CSV')}" />
+									<menuitem label="${c:l('txt.ui.export.Cus')} ${c:l('txt.ui.export.CSV')}" 
+										disabled="true" />
 						       	</menupopup>
 	            				
             					<button iconSclass="z-icon-refresh" 
