--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -204,10 +204,11 @@
 																	</vbox>
 																	<vbox hflex="1" style="margin-left: 5px;">
 																		<label value="${c:l('txt.ui.iscus.systemId')}"/>
-																		<textbox readonly="true"
-																			value="${vm.iscusSystemId}"
+																		<textbox readonly="@load(vm.isItemReadOnly())"
+																			value="@bind(fx.participant.courseParticipant.iscusSystemId)"
 																			sclass="form-input-text"
-																			hflex="1" />
+																			hflex="1"
+																			maxlength="32" />
 																	</vbox>
 																</hlayout>
 															</cell>
