--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -47,7 +47,7 @@
             				<!-- Zpravy -->
 	            			<button tooltiptext="${c:l('txt.ui.common.Messaging')}" 
 	            				iconSclass="z-icon-at"
-	            				popup="messagePopup, position=after_start"
+	            				popup="messagePopup, position=after_end"
 	            				sclass="toolbar-btn"
 			            		if="${vm.isLoggedUserInRole('ADMIN')}" />
 			                <menupopup id="messagePopup" hflex="min" if="${vm.isLoggedUserInRole('ADMIN')}" >
@@ -60,10 +60,22 @@
 									tooltiptext="${c:l('txt.ui.common.confirmCourseApplicationEmail.desc')}" />
 					       	</menupopup>
             				
+            				<!-- Export do soubru -->
             				<button iconSclass="z-icon-download" 
-            					onClick="@command('exportToExcel',listbox=courseApplicationList)" 
-            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
-            					sclass="toolbar-btn"/>
+	            					popup="downloadPopup, position=after_end"
+	            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+	            					if="${vm.isLoggedUserInRole('ADMIN')}" 
+	            					sclass="toolbar-btn"/>
+            				<menupopup id="downloadPopup" hflex="min" if="${vm.isLoggedUserInRole('ADMIN')}" >
+	            				<!-- Standardni export -->
+								<menuitem label="${c:l('txt.ui.export.Standard')} ${c:l('txt.ui.export.XLS')}" 
+									onClick="@command('exportToExcel',listbox=courseApplicationList)" />
+								<menuseparator/>
+								<!-- Seznam ucastniku s neoverenou adresou -->
+								<menuitem label="${c:l('txt.ui.export.NotValidAddress')}" 
+									onClick="@command('exportToExcelNotValidAddrCmd',listbox=courseApplicationList)" />
+					       	</menupopup>
+            				
            					<button iconSclass="z-icon-refresh" 
            						onClick="@command('refreshDataCmd')" 
            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
