--- a/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
@@ -103,6 +103,7 @@
 						<vbox hflex="1">
 							<hlayout hflex="1">
 								<label value="${c:l('txt.ui.common.street')}"/>
+								<label value="(${c:l('txt.ui.common.orCityPart')})" style="margin-left: 5px; font-size: 12px;"/>
 <!-- 								<hbox hflex="1" pack="end" xmlns:x="xhtml" style="padding-left: 5px; padding-right: 12px; height: 26px;"> -->
 <!-- 									<x:i class="z-icon-check-circle" visible="@load(!empty(vm.streetSelected))" style="color: green;)" /> -->
 <!-- 								</hbox> -->
