--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -311,6 +311,22 @@
 													</hbox>
 												</cell>
 											</row>
+											
+											<!-- Adresa -->
+											<row>
+												<cell align="left">
+													<button id="realSubmitBtn"
+														onClick="@command('submit')"
+														visible="false"
+														label="Submit" />
+													<custom-attributes submitBtn="${realSubmitBtn}"></custom-attributes>
+													<ruian-address contact="${vm.courseParticipant.contact}" 
+														contactDisabled="false" 
+														submitBtn="@load(realSubmitBtn)" />
+												</cell>
+											</row>
+											
+											
 											<row>
 												<cell >
 													<vbox hflex="1">
@@ -346,10 +362,10 @@
 									</grid>
 									
 									<hbox style="margin: 5px 10px 15px 20px;">
-										<button label="Uložit"
-												onClick="@command('submit')" 
-												iconSclass="z-icon-check" 
-												sclass="btn-success"/>
+										<button label="${c:l('txt.ui.common.Save')}"
+											forward="onClick=realSubmitBtn.onClick"
+											sclass="btn-success"
+											iconSclass="z-icon-check" />
 									</hbox>
 						    	</tabpanel>
 						    	
