--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -52,6 +52,10 @@
 				        <tab id="courseInfo" label="${c:l('txt.ui.common.General')}" />
 				        <tab id="courseParticipants" disabled="@load(!vm.updateMode)" label="${c:l('txt.ui.common.participants')}" iconSclass="z-icon-child" />
 				        <tab id="lessons" label="${c:l('txt.ui.common.lessons')}" disabled="@load(!vm.updateMode)" iconSclass="z-icon-calendar" />
+				        <tab id="trainers" label="${c:l('txt.ui.common.trainers')}" 
+				        	disabled="@load(!vm.updateMode)" 
+				        	onSelect="@command('trainersTabSelectedCmd')" 
+				        	iconSclass="z-icon-user" />
 				    </tabs>
 				    <tabpanels>
 				        <tabpanel >
@@ -262,7 +266,6 @@
 						        </template>
 						    </listbox>
 				        </tabpanel>
-				        
 				        <tabpanel>
 				        	<!-- Lekce -->
 							<listbox model="@load(vm.course.lessonList)"
@@ -304,6 +307,59 @@
 						        </template>
 						    </listbox>
 				        </tabpanel>
+				        <tabpanel>
+				        	<!-- Treneri -->
+							<listbox model="@load(vm.course.trainerList)"
+								id="trainerList"
+								hflex="1"
+								mold="paging"
+								pageSize="10"
+								visible="@load(vm.updateMode)"
+								emptyMessage="${c:l('txt.ui.common.noDataFound')}"
+								class="listbox-400" >
+						        <auxhead>
+						            <auxheader colspan="2" >
+						            	<button tooltiptext="${c:l('txt.ui.common.new')}" 
+				            					sclass="add-item-btn"  
+				            					iconSclass="z-icon-plus" 
+				            					popup="addTrainerPopup" />
+				            			
+				            			<popup id="addTrainerPopup">
+				            				<combobox id="trainerToSelect" 
+												model="@load(vm.trainersToSelect)"
+												onSelect="@command('addTrainerCmd')"
+												selectedItem="@bind(vm.trainerSelected)"
+												placeholder="*"
+												style="background: white;"
+												hflex="1"
+												readonly="true" >
+												<template name="model">
+									            	<comboitem label="${each.contact.completeName}"/>
+												</template>
+											</combobox>
+				            			</popup>
+						            </auxheader>
+						        </auxhead>
+								
+						        <listhead>
+						            <listheader label="${c:l('txt.ui.common.firstname')}" sort="auto(contact.surname)" hflex="1" align="left" />
+						            <listheader width="70px" align="center" />
+						        </listhead>
+						         
+						        <template name="model">
+						            <listitem>
+						                <listcell label="${each.contact.completeName}" />	                	
+						                <listcell>
+						                	<button sclass="btn-danger round-btn" 
+						                		iconSclass="z-icon-times" 
+						                		tooltiptext="${c:l('txt.ui.common.remove')}" 
+						                		onClick="@command('removeTrainerCmd', item=each)" />
+						                </listcell>
+						            </listitem>
+						        </template>
+						    </listbox>
+				        </tabpanel>
+				        
 				    </tabpanels>
 				</tabbox>
 			</vlayout>
